2006-09-07  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/framework-ps.scm (output-preview-framework): use new name.

	* lily/program-option.cc (internal_set_option): use new names.

	* Documentation/user/SConscript (lilypond_book_flags): update -d
	variable names.

	* Documentation/user/lilypond-book.itely (Inserting LilyPond
	output into other programs): new variable names.

	* scm/lily.scm (define-scheme-options): uniformize var names.

	* lily/tuplet-engraver.cc (listen_tuplet_span): verify that
	tuplets_ is non-empty before popping.

2006-09-07  Joe Neeman  <joeneeman@gmail.com>

	* lily/spanner.cc (find_broken_piece): 
	* lily/spacing-spanner.cc (get_columns): 
	* lily/source-file.cc (get_line): 
	* lily/simple-spacer.cc (get_column_description): 
	* lily/keyword.cc (lookup): 
	use the new binary search.

	* flower/include/std-vector.hh: replace binary_search with
	a more STL-like version

2006-09-05  Joe Neeman  <joeneeman@gmail.com>

	* lily/page-turn-engraver.cc (penalty): minPageTurnLength ->
	minimumPageTurnLength

	* scm/define-context-properties.scm (all-user-translation-properties):
	add minimumPageTurnLength and minimumRepeatLengthForPageTurn

	* Documentation/user/page.itely: update page breaking documentation

2006-09-04  Michael Welsh Duggan  <md5i@cs.cmu.edu>

	* lily/tie-performer.cc: remove unused last_event_ property.
	(class Tie_performer): add now_tied_heads_ property for
	partially-tied heads.
	(acknowledge_audio_element): when adding an Audio_note, put the
	note in now_tied_heads_ if the audio note is partially tied.
	(stop_translation_timestep): always include entries in
	now_tied_heads_ in heads_to_tie_.

	* lily/drum-note-performer.cc (process_music): look for tie-events
	in the articulations; pass to Audio_note constructor.

	* lily/note-performer.cc (process_music): look for tie-events in
	the articulations; pass to Audio_note constructor.

	* lily/audio-item.cc (Audio_note): Initialize tie_event_ in
	constructor.
